Closes #41 - Edit procurement bidding period info

--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -17,7 +17,7 @@
         <input type="hidden" id="id" name="id" value="@Model.Procurement.Id" />
         <button class="btn btn-primary btn-sm">Start</button>&nbsp;
     </form>
-    <form asp-page-handler="issuecontract" method="post" hidden="@Model.HideIssuContractButton">
+    <form asp-page-handler="issuecontract" method="post" hidden="@Model.HideIssueContractButton">
         <input type="hidden" id="id" name="id" value="@Model.Procurement.Id" />
         <button class="btn btn-success btn-sm">Issue Contract</button>&nbsp;
     </form>
