--- a/ProcurementTracker/Pages/Procurements/Edit.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Edit.cshtml
@@ -28,7 +28,7 @@
             <partial name="Procurements/_EditProcurementNegotiations" />
             <partial name="Procurements/_EditProcurementAdministrativeReview" />
 
-            <div class="form-group">
+            <div class="form-group pt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
