--- a/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementBasicData.cshtml
+++ b/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementBasicData.cshtml
@@ -1,72 +1,73 @@
 ﻿@model ProcurementTracker.Pages.Procurements.EditModel
 
-@{
-    bool isHidden = Model.Procurement.Status != ProcurementStatus.NOT_STARTED.ToString();
-    if (Model.DisableBasicDataSection)
-    {
-        <input type="hidden" asp-for="Procurement.Subject" />
-        <input type="hidden" asp-for="Procurement.Description" />
-        <input type="hidden" asp-for="Procurement.Department" />
-        <input type="hidden" asp-for="Procurement.Quantity" />
-        <input type="hidden" asp-for="Procurement.EstimatedAmount" />
-        <input type="hidden" asp-for="Procurement.Currency" />
-        <input type="hidden" asp-for="Procurement.ProcurementType" />
-        <input type="hidden" asp-for="Procurement.FundingSource" />
-        <input type="hidden" asp-for="Procurement.ProcurementMethod" />
-    }
+@if (Model.DisableBasicDataSection)
+{
+    <input type="hidden" asp-for="Procurement.Subject" />
+    <input type="hidden" asp-for="Procurement.Description" />
+    <input type="hidden" asp-for="Procurement.Department" />
+    <input type="hidden" asp-for="Procurement.Quantity" />
+    <input type="hidden" asp-for="Procurement.EstimatedAmount" />
+    <input type="hidden" asp-for="Procurement.Currency" />
+    <input type="hidden" asp-for="Procurement.ProcurementType" />
+    <input type="hidden" asp-for="Procurement.FundingSource" />
+    <input type="hidden" asp-for="Procurement.ProcurementMethod" />
 }
 
 <section class="@(Model.HideBasicDataSection ? "d-none" : "")">
     <fieldset disabled=@Model.DisableBasicDataSection>
-        <p class="h6">Basic Data</p>
+        <p class="h6 pt-3">Basic Data</p>
         <hr />
 
-        <div class="form-group">
-            <label asp-for="Procurement.Subject" class="control-label"></label>
-            <input asp-for="Procurement.Subject" class="form-control col-sm-8" />
-            <span asp-validation-for="Procurement.Subject" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Procurement.Description" class="control-label"></label>
-            <textarea asp-for="Procurement.Description" class="form-control col-sm-8" rows="3"></textarea>
-            <span asp-validation-for="Procurement.Description" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Procurement.Department" class="control-label"></label>
-            <input asp-for="Procurement.Department" class="form-control col-sm-4" />
-            <span asp-validation-for="Procurement.Department" class="text-danger"></span>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-sm-3">
-                <label asp-for="Procurement.Quantity" class="control-label"></label>
-                <input asp-for="Procurement.Quantity" type="number" class="form-control" />
-                <span asp-validation-for="Procurement.Quantity" class="text-danger"></span>
-            </div>
-            <div class="form-group col-sm-6">
-                <label asp-for="Procurement.EstimatedAmount" class="control-label"></label>
-                <input asp-for="Procurement.EstimatedAmount" type="number" class="form-control" />
-                <span asp-validation-for="Procurement.EstimatedAmount" class="text-danger"></span>
-            </div>
-            <div class="form-group col-sm-3">
-                <label asp-for="Procurement.Currency" class="control-label"></label>
-                <select asp-for="Procurement.Currency" asp-items="Model.Currencies" class="form-control"></select>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-sm-4">
-                <label asp-for="Procurement.ProcurementType" class="control-label"></label>
-                <select asp-for="Procurement.ProcurementType" asp-items="Model.ProcurementTypes" class="form-control"></select>
-                <span asp-validation-for="Procurement.ProcurementType" class="text-danger"></span>
-            </div>
-            <div class="form-group col-sm-4">
-                <label asp-for="Procurement.FundingSource" class="control-label"></label>
-                <select asp-for="Procurement.FundingSource" asp-items="Model.FundingSources" class="form-control"></select>
-                <span asp-validation-for="Procurement.FundingSource" class="text-danger"></span>
-            </div>
-            <div class="form-group col-sm-4">
-                <label asp-for="Procurement.ProcurementMethod" class="control-label"></label>
-                <select asp-for="Procurement.ProcurementMethod" asp-items="Model.ProcurementMethods" class="form-control"></select>
-                <span asp-validation-for="Procurement.ProcurementMethod" class="text-danger"></span>
+        <div class="card bg-light">
+            <div class="card-body">
+                <div class="form-group">
+                    <label asp-for="Procurement.Subject" class="control-label"></label>
+                    <input asp-for="Procurement.Subject" class="form-control col-sm-8" />
+                    <span asp-validation-for="Procurement.Subject" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Procurement.Description" class="control-label"></label>
+                    <textarea asp-for="Procurement.Description" class="form-control col-sm-8" rows="3"></textarea>
+                    <span asp-validation-for="Procurement.Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Procurement.Department" class="control-label"></label>
+                    <input asp-for="Procurement.Department" class="form-control col-sm-4" />
+                    <span asp-validation-for="Procurement.Department" class="text-danger"></span>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm-3">
+                        <label asp-for="Procurement.Quantity" class="control-label"></label>
+                        <input asp-for="Procurement.Quantity" type="number" class="form-control" />
+                        <span asp-validation-for="Procurement.Quantity" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label asp-for="Procurement.EstimatedAmount" class="control-label"></label>
+                        <input asp-for="Procurement.EstimatedAmount" type="number" class="form-control" />
+                        <span asp-validation-for="Procurement.EstimatedAmount" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-sm-3">
+                        <label asp-for="Procurement.Currency" class="control-label"></label>
+                        <select asp-for="Procurement.Currency" asp-items="Model.Currencies" class="form-control"></select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm-4">
+                        <label asp-for="Procurement.ProcurementType" class="control-label"></label>
+                        <select asp-for="Procurement.ProcurementType" asp-items="Model.ProcurementTypes" class="form-control"></select>
+                        <span asp-validation-for="Procurement.ProcurementType" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label asp-for="Procurement.FundingSource" class="control-label"></label>
+                        <select asp-for="Procurement.FundingSource" asp-items="Model.FundingSources" class="form-control"></select>
+                        <span asp-validation-for="Procurement.FundingSource" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label asp-for="Procurement.ProcurementMethod" class="control-label"></label>
+                        <select asp-for="Procurement.ProcurementMethod" asp-items="Model.ProcurementMethods" class="form-control"></select>
+                        <span asp-validation-for="Procurement.ProcurementMethod" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </fieldset>
