--- a/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementBiddingPeriod.cshtml
+++ b/ProcurementTracker/Pages/Shared/Procurements/_EditProcurementBiddingPeriod.cshtml
@@ -1,18 +1,23 @@
 ﻿@model ProcurementTracker.Pages.Procurements.EditModel
 
 <section class="@(Model.HideBiddingPeriodSection ? "d-none" : "") @(Model.DisableBiddingPeriodSection ? "disabled": "")">
-    <p class="h6">Bidding Period</p>
+    <p class="h6 pt-3">Bidding Period</p>
     <hr />
-    <div class="form-row">
-        <div class="form-group col-sm-6">
-            <label asp-for="Procurement.BidInvitationDate" class="control-label"></label>
-            <input asp-for="Procurement.BidInvitationDate" class="form-control" type="date" />
-            <span asp-validation-for="Procurement.BidInvitationDate" class="text-danger"></span>
-        </div>
-        <div class="form-group col-sm-6">
-            <label asp-for="Procurement.BidClosingDate" class="control-label"></label>
-            <input asp-for="Procurement.BidClosingDate" class="form-control" type="date" />
-            <span asp-validation-for="Procurement.BidClosingDate" class="text-danger"></span>
+
+    <div class="card bg-light">
+        <div class="card-body">
+            <div class="form-row">
+                <div class="form-group col-sm-6">
+                    <label asp-for="Procurement.BidInvitationDate" class="control-label"></label>
+                    <input asp-for="Procurement.BidInvitationDate" class="form-control" type="date" />
+                    <span asp-validation-for="Procurement.BidInvitationDate" class="text-danger"></span>
+                </div>
+                <div class="form-group col-sm-6">
+                    <label asp-for="Procurement.BidClosingDate" class="control-label"></label>
+                    <input asp-for="Procurement.BidClosingDate" class="form-control" type="date" />
+                    <span asp-validation-for="Procurement.BidClosingDate" class="text-danger"></span>
+                </div>
+            </div>
         </div>
     </div>
 </section>
