Closes #9 - Transition a bid through the different stages

--- a/ProcurementTracker/Pages/Bids/Create.cshtml
+++ b/ProcurementTracker/Pages/Bids/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>Add Bid</h1>
-<h4>Procurement: @Model.ProcurementId</h4>
+<h4>Procurement: @Model.Procurement.Description</h4>
 <hr />
 
 <p>
