--- a/ProcurementTracker/Pages/Bids/Index.cshtml
+++ b/ProcurementTracker/Pages/Bids/Index.cshtml
@@ -40,7 +40,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.QuotedFee)
                 </td>
-                <td>
+                <td class="table-@item.StatusColorCode">
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
                 <td>
