--- a/ProcurementTracker/Pages/Bids/Details.cshtml
+++ b/ProcurementTracker/Pages/Bids/Details.cshtml
@@ -7,9 +7,8 @@
 
 <h1>Bid Details</h1>
 <h4>Procurement: @Model.Bid.Procurement.Description</h4>
-<hr />
 
-<partial name="Bids/ActionBar/_BidDetailsActionBar" />
+<partial name="Bids/ActionBar/_BidDetailsActionBar" /><br />
 
 <div>
     <dl class="row">
@@ -31,7 +30,7 @@
             @Html.DisplayNameFor(model => model.Bid.Status)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Bid.Status)
+            <span class="badge bg-@Model.Bid.StatusColorCode text-white">@Html.DisplayFor(model => model.Bid.Status)</span>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Bid.Submitted)
