Closes #70 - Dont receive bids when procurement is not in RECEIPT AND OPENING BIDS stage

--- a/ProcurementTracker/Pages/Shared/Bids/ActionBar/_BidIndexActionBar.cshtml
+++ b/ProcurementTracker/Pages/Shared/Bids/ActionBar/_BidIndexActionBar.cshtml
@@ -5,15 +5,18 @@
         <hr />
         <p>
             <a asp-page="../procurements/details"
-               asp-route-id="@Model.ProcurementId"
-               class="btn btn-light btn-outline-secondary">
+       asp-route-id="@Model.ProcurementId"
+       class="btn btn-light btn-outline-secondary">
                 <i class="fas fa-angle-left"></i> Back to Procurement
             </a>
-            <a asp-page="Create"
-               asp-route-procurementid="@Model.ProcurementId"
-               class="btn btn-light btn-outline-secondary">
-                <i class="fas fa-plus-square"></i> Add Bid
-            </a>
+            @if (Model.Procurement.Status == ProcurementStatus.BIDS_RECEIPT_AND_OPENING.ToString())
+            {
+                <a asp-page="Create"
+                   asp-route-procurementid="@Model.ProcurementId"
+                   class="btn btn-light btn-outline-secondary">
+                    <i class="fas fa-plus-square"></i> Add Bid
+                </a>
+            }
         </p>
     }
     else
