--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -38,7 +38,7 @@
                 <td>
                     <a asp-page="./Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Subject)</a>
                 </td>
-                <td class="table-@item.StatusColorCode">
+                <td class="bg-@item.StatusColorCode text-@item.StatusTextColorCode">
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
                 <td>
